--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="mobilestyles.css">
     <title>Document</title>
 </head>
 
@@ -13,26 +14,52 @@
 
     <header>
         <div id="user-interactions">
-            <div id="img-logo">logo</div>
-            <div id="search-bar">search bar</div>
+            <div class="mobile-header-display" id="img-logo">logo</div>
+            <div class="mobile-header-display" id="search-bar">search bar</div>
             <div id="social-media-icons">social media icons</div>
-            <div class="login-buttons">
-                <button id="sign-in-button">sign in</button>
-                <button id="sign-up-button">sign up</button>
-            </div>
         </div>
         <nav id="nav-bar">
-            <ul>
-                <li>Collections</li>
-                <li>Game Rules</li>
-                <li>Sources</li>
-                <li>Tools</li>
-                <li>Marketplace</li>
-                <li>Media</li>
-                <li>Forums</li>
-                <li>New Player Guide</li>
-                <li>Subscribe</li>
-            </ul>
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                    <span></span>
+                </label>
+
+
+                <ul class="menu__box">
+                    <div id="hamburger-button">
+                        <button class="menu__item login-buttons" id="black-button">sign in</button>
+                        <button class="menu__item login-buttons" id="red-button">sign up</button>
+                    </div>
+                    <li><a class="menu__item" href="#">Collections</a></li>
+                    <li><a class="menu__item" href="#">Game Rules</a></li>
+                    <li><a class="menu__item" href="#">Sources</a></li>
+                    <li><a class="menu__item" href="#">Tools</a></li>
+                    <li><a class="menu__item" href="#">Marketplace</a></li>
+                    <li><a class="menu__item" href="#">Media</a></li>
+                    <li><a class="menu__item" href="#">Forums</a></li>
+                    <li><a class="menu__item" href="#">New Player Guide</a></li>
+                    <li><a class="menu__item" href="#">Subscribe</a></li>
+                </ul>
+            </div>
+            <!-- <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox">
+                <label class="menu__button" for="menu__toggle">
+                    <span></span>
+                </label>
+
+                <ul class="menu_box">
+                    <li><a class="menu__item" href="#">Collections</a></li>
+                    <li><a class="menu__item" href="#">Game Rules</a></li>
+                    <li><a class="menu__item" href="#">Sources</a></li>
+                    <li><a class="menu__item" href="#">Tools</a></li>
+                    <li><a class="menu__item" href="#">Marketplace</a></li>
+                    <li><a class="menu__item" href="#">Media</a></li>
+                    <li><a class="menu__item" href="#">Forums</a></li>
+                    <li><a class="menu__item" href="#">New Player Guide</a></li>
+                    <li><a class="menu__item" href="#">Subscribe</a></li>
+                </ul>
+            </div> -->
         </nav>
     </header>
     <main>
