started working on the links on the main page for mobile

--- a/index.html
+++ b/index.html
@@ -42,24 +42,6 @@
                     <li><a class="menu__item" href="#">Subscribe</a></li>
                 </ul>
             </div>
-            <!-- <div class="hamburger-menu">
-                <input id="menu__toggle" type="checkbox">
-                <label class="menu__button" for="menu__toggle">
-                    <span></span>
-                </label>
-
-                <ul class="menu_box">
-                    <li><a class="menu__item" href="#">Collections</a></li>
-                    <li><a class="menu__item" href="#">Game Rules</a></li>
-                    <li><a class="menu__item" href="#">Sources</a></li>
-                    <li><a class="menu__item" href="#">Tools</a></li>
-                    <li><a class="menu__item" href="#">Marketplace</a></li>
-                    <li><a class="menu__item" href="#">Media</a></li>
-                    <li><a class="menu__item" href="#">Forums</a></li>
-                    <li><a class="menu__item" href="#">New Player Guide</a></li>
-                    <li><a class="menu__item" href="#">Subscribe</a></li>
-                </ul>
-            </div> -->
         </nav>
     </header>
     <main>
@@ -74,16 +56,19 @@
             </div>
             <div id="main-links-container">
                 <div class="popular-link" id="pop-link1">
-                    <p>popular link 1 and image</p>
-                    <img src="" alt="">
+                    <a href="#">
+                        <span class="blue" data-label="Create a Character">Create A Character (Hero Image)</span>
+                    </a>
                 </div>
                 <div class="popular-link" id="pop-link2">
-                    <p>popular link 1 and image</p>
-                    <img src="" alt="">
+                    <a href="#">
+                        <span class="purple" data-label="Create a Character">Create A Character (Hero Image)</span>
+                    </a>
                 </div>
                 <div class="popular-link" id="pop-link3">
-                    <p>popular link 1 and image</p>
-                    <img src="" alt="">
+                    <a href="#">
+                        <span class="orange" data-label="Create a Character">Create A Character (Hero Image)</span>
+                    </a>
                 </div>
             </div>
         </section>
