--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
         </section>
         <section>
-            <div>
+            <div id="lonely-button">
                 <button id="more-articles-button">See All Posts</button>
             </div>
         </section>
